--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 					<section id="banner">
 						<div class="inner">
 							<h2>Lorna May Brown</h2>
-							<p>BSC Researcher, Explorer and overall pain in my ass </p>
+							<p>MSc Researcher, Marine Biologist, Scuba Diving Instructor </p>
 						</div>
 					</section>
 
@@ -51,10 +51,10 @@
 						<!-- One -->
 							<section id="one" class="wrapper spotlight style1">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+									<a href="#" class="image"><img src="images/plane.jpg" alt="" /></a>
 									<div class="content">
-										<h2 class="major">My first description</h2>
-										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
+										<h2 class="major">First Impressions</h2>
+										<p> A world traveller, with experience living in five different countries and visiting many more, Lorna is not only fluent in Spanish, but also highly multicultural and adaptable. Her passion for wildlife ecoloigy and conservation was nurtured from a young age, and then through seeking opportunities to interact with and conserve all manner of creatures, she soon found herself beginning her journey as a Marine Biologist.</p>
 										<a href="project1.html" class="special">Learn more</a>
 									</div>
 								</div>
@@ -63,10 +63,10 @@
 						<!-- Two -->
 							<section id="two" class="wrapper alt spotlight style2">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+									<a href="#" class="image"><img src="images/photo.jpg" alt="" /></a>
 									<div class="content">
-										<h2 class="major">Tempus adipiscing</h2>
-										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
+										<h2 class="major">Education</h2>
+										<p>Having completed secondary education in England, Lorna pursued her Bachelors of Science in Integrated Animal Biology at the University of South Florida after being granted an academic scholarship. Then, in 2020 she sought her Master's of Science in Marine Vertebrate Ecology and Conservation at the University of Exeter.</p>
 										<a href="#" class="special">Learn more</a>
 									</div>
 								</div>
@@ -75,10 +75,10 @@
 						<!-- Three -->
 							<section id="three" class="wrapper spotlight style3">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+									<a href="#" class="image"><img src="images/diving.jpg" alt="" /></a>
 									<div class="content">
-										<h2 class="major">Nullam dignissim</h2>
-										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
+										<h2 class="major">SCUBA Diving</h2>
+										<p>An avid SCUBA diver with over seven years experience diving in six countries, and a now certified PADI Master Scuba Diver Trainer. While diving has always been extremely enjoyable to Lorna, it has become more than a simple hobbie; its made her a more conscientious marine biologist and enabled underwater visual surveys for ecosystem monitoring. It has even become its own career adjacent through teaching.  </p>
 										<a href="#" class="special">Learn more</a>
 									</div>
 								</div>
@@ -87,34 +87,46 @@
 						<!-- Four -->
 							<section id="four" class="wrapper alt style1">
 								<div class="inner">
-									<h2 class="major">Vitae phasellus</h2>
-									<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
+									<h2 class="major">Key Projects and experience</h2>
+									<p>Delve deeper into some of the projects and experiences that best illustrate Lorna's experience as a Marine Biologist. From her early years working in remote research hubs to her Master's dissertation: here is where you find it all. </p>
 									<section class="features">
 										<article>
-											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
-											<h3 class="major">Sed feugiat lorem</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
+											<a href="#" class="image"><img src="images/exeter.png" alt="" /></a>
+											<h3 class="major">Research Dissertation - University of Exeter</h3>
+											<p>First nation-wide assessment of the abundance and distribution of three endangered sea turtle species in Belize, using a large dataset covering eight years of underwater visual censuses and baited remote underwater videos.</p>
 											<a href="#" class="special">Learn more</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
-											<h3 class="major">Nisl placerat</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
+											<a href="#" class="image"><img src="images/babyleather.png" alt="" /></a>
+											<h3 class="major">Research Assistant - Ecology Project International</h3>
+											<p>Lead research assistant helping efforts at Pacuare Reserve in Costa Rica to monitor nesting behaviours of three marine turtle species.</p>
 											<a href="#" class="special">Learn more</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
-											<h3 class="major">Ante fermentum</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
+											<a href="#" class="image"><img src="images/FLAQ1.jpg" alt="" /></a>
+											<h3 class="major">Aquarist and Keeper - The Florida Aquarium</h3>
+											<p>Assited the work of two different departments with a wide range of both terrestrial and aquatic species, developing skills in husbandry, operant conditioning and guest education.</p>
 											<a href="#" class="special">Learn more</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
-											<h3 class="major">Fusce consequat</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
+											<a href="#" class="image"><img src="images/bcr1.jpg" alt="" /></a>
+											<h3 class="major">Small Cat Keeper - Big Cat Rescue</h3>
+											<p>From the infamous 'Tiger King' series on Netflix, at Big Cat Rescue Lorna gained experience with husbandry and training with several species of sometimes aggresive wildcats in the heart of Florida.</p>
 											<a href="#" class="special">Learn more</a>
 										</article>
-									</section>
+										<article>
+											<a href="#" class="image"><img src="images/seychellesdiv.png" alt="" /></a>
+											<h3 class="major">Research Assistant</h3>
+											<p>Aided efforts to survey coral reef ecosystem around Cap Ternay, used in long-term monitoring and recovery research sponsored by the Seychellois government, through the use of underwater visual censuses.</p>
+											<a href="#" class="special">Learn more</a>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="images/dwarf.jpg" alt="" /></a>
+											<h3 class="major">Animal Attendant</h3>
+											<p>Supported the work of Ian Newby, founder of 'Dangerous Wild Animal Rescue Facility', one of the only UK facilities to help house many illegal, exotic and often dangerous animals, abandoned after failed domestication.</p>
+											<a href="#" class="special">Learn more</a>
+										</article>
+										</section>
 								</div>
 							</section>
 
@@ -130,7 +142,7 @@
 								<li class="icon brands fa-twitter"><a href="https://twitter.com/lornamaybrown" target="_blank"> Twitter</a></li>
 								<li class="icon brands fa-instagram"><a href="https://instagram.com/lornamaybrown"target="_blank"> Instagram</a></li>
 								<li class="icon brands fa-linkedin"><a href="https://www.linkedin.com/in/lornamaybrown"target="_blank"> LinkedIn</a></li>
-								<li class=""><a href="/pdfs/Resume.pdf" target="_black"> Open my Resume </a></li>
+								<li class=""><a href="/pdfs/CV.pdf" target="_black"> Open my Curriculum Vitae </a></li>
 							</ul>
 						</div>
 					</section>
